Adjusted menu items.  Basic layout for header/jumbotron achieved.  Need to adjust spacing and make sure menu is a nav item.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,22 +7,18 @@ h1 {
     font-family: 'Nunito', sans-serif;
     color: #D74B4B;
     font-size: 2.5rem;
-    margin-left: 1rem;
+    margin-left: 2rem;
 }
 
 h2 {
     font-family: 'Nunito', sans-serif;
     color: white;
-    margin-left: 1rem;
+    margin-left: 2rem;
 }
 
-.left-style {
-    padding-left: 0rem;
-    position: static;
-}
-
-
-.title {
-    width: 100%;
-    left: 10%
+.menu-styles {
+    margin-right: 2rem;
+    margin-top: 2rem;
+    color: white;
+    font-size: 1.5rem;
 }
